# EdgeDisplayWidgets

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
backend/: __init__.py  config.py  hub.py  main.py  notes.py
backend/modules/: __init__.py  base.py  disk_usage.py  heartbeat.py  media.py  nvidia.py  quick_actions.py  sensors.py  smart_lights.py  system.py  top_processes.py  weather.py  youtube.py
frontend/: index.html
frontend/css/: base.css  fonts.css  widgets.css
frontend/css/themes/: clean.css  cyberpunk.css  industrial.css  light.css  nightclub.css  steampunk.css  toxic.css
frontend/js/: app.js  confirm.js  i18n.js  layout_editor.js  registry.js  swiper.js  theme.js  ws.js
frontend/js/lib/: sparkline.js
frontend/js/settings/: quick_actions_editor.js
frontend/js/widgets/: clock.js  cpu.js  disk_usage.js  gpu.js  heartbeat.js  media.js  network.js  notes.js  pomodoro.js  quick_actions.js  ram.js  sensors.js  smart_lights.js  top_processes.js  weather.js  youtube.js
frontend/locales/: de.json  en.json
scripts/: install.sh  kiosk.sh
systemd/: edge-dashboard.service
tests/: test_disk_usage.py  test_hub.py  test_media.py  test_notes.py  test_nvidia.py  test_quick_actions.py  test_sensors.py  test_settings.py  test_smart_lights.py  test_system.py  test_top_processes.py  test_weather.py  test_websocket.py  test_youtube.py
