[project]
name = "edge-dashboard"
version = "1.0.0"
description = "Modular dashboard for the Corsair Xeneon Edge 14.5\" secondary touch display."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Heiko Stuhrmann", email = "heiko@stuhrmann.wtf" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "psutil>=6.1",
    "nvidia-ml-py>=12.0",
    "dbus-next>=0.2.3",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
